# WeChatDataAnalysis

./: .gitignore  .mailmap  README.md  THIRD_PARTY_NOTICES.md  key_v4.py  main.py  pyproject.toml  scan.py
desktop/: entitlements.mac.plist  package-lock.json  package.json
frontend/: app.vue  nuxt.config.ts  package-lock.json  package.json
native/wce_integrity/: Cargo.toml  README.md  build.rs
native/wce_integrity/src/: css_contacts.css  css_fallback.css  css_patch.css  css_records_generic.css  css_records_project.css  css_sns.css  lib.rs  runtime.js
tests/: test_account_archive_cross_platform.py  test_chat_edit_store.py  test_chat_export_message_types_semantics.py  test_chat_export_targets.py  test_chat_first_read_frontend.py  test_contacts_export.py  test_contacts_export_frontend.py  test_database_filters.py  test_decrypt_image_keys_frontend.py  test_decrypt_stream_sse.py  test_export_excel_format.py  test_export_format_layout_frontend.py  test_export_integrity.py  test_image_key_memory_scan.py  test_image_key_memory_workflow.py  test_image_key_resolver.py  test_image_key_router_metadata.py  test_image_key_verified_store.py  test_image_key_workflow_weflow.py  test_key_service_image_key_account_match.py  test_key_service_manual_wechat_install_path.py  test_keys_saved_db_key_source_validation.py  test_macos_platform_support.py  test_media_decrypt_stream_cancel.py  test_media_emoji_download_stream.py  test_media_emoticon_catalog.py  test_message_links_frontend.py  test_output_dir_override.py  test_parse_app_message.py  test_realtime_sync_table_creation.py  (+9 more)
(+130 files in other folders)
