[package]
name = "wce_integrity"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
name = "wce_integrity"
crate-type = ["cdylib"]

[dependencies]
base64 = "0.22"
hex = "0.4"
html5ever = "0.27"
markup5ever_rcdom = "0.3"
once_cell = "1.19"
p256 = { version = "0.13", features = ["ecdsa"] }
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py311"] }
regex = "1.10"
serde_json = "1.0"
sha2 = "0.10"

[build-dependencies]
regex = "1.10"
